# jetson-auto-fan

./: Cargo.toml  LICENSE  README.md
debian/: service
src/: main.rs
